# Transfer

./: .clang-format  .gitignore  CMakeLists.txt  MakeTransfer.bat  MakeTransfer.sh  Transfer.rc  build_notes.txt  controlnotes.txt  count_lines.py  devnotes.txt  system_crawler_output.txt
Documentation/: class_map.md
HelperScripts/: system_crawler.py
PythonScripts/: count_lines.py  create_docs.py  requirements.txt
Transfer/: OLDActionHelpers.cpp  OLDActionHelpers.h  OLDBodies.cpp  OLDBodies.h  OLDColors.cpp  OLDColors.h  OLDConstants.h  OLDEventListenerHelpers.cpp  OLDEventListenerHelpers.h  OLDGameState.h  OLDGravityForceCalculation.cpp  OLDGravityForceCalculation.h  OLDPhysicsStructures.h  OLDRenderHelpers.cpp  OLDRenderHelpers.h  OLDRunGame.cpp  OLDRunGame.h  OLDUtilityHelpers.cpp  OLDUtilityHelpers.h  main.cpp
Transfer/Assets/: Transfer.rc
Transfer/Assets/Visual/: Transfer.icns
Transfer/Core/: Game.h  GameState.h
Transfer/src/: main.cpp
Transfer/src/Core/: CameraState.hpp  Game.cpp  Game.h  Game.hpp  GameState.cpp  GameState.h  GameState.hpp  InputState.h  InputState.hpp  UIState.cpp  UIState.h  UIState.hpp
Transfer/src/Entities/: GravitationalBody.cpp  GravitationalBody.h  MathStructures.h  PhysicsStructures.h  TwinklingStars.h  UIElement.cpp  UIElement.h
Transfer/src/Entities/Menus/: Menu.cpp  Menu.h
Transfer/src/Entities/Menus/PauseMenu/: PauseMenu.cpp  PauseMenu.h
Transfer/src/Entities/Physics/: GravitationalBody.cpp  GravitationalBody.h  GravitationalBody.hpp
Transfer/src/Entities/Sound/: MusicModeEnum.hpp  SoundEffect.h
Transfer/src/Entities/UIElements/: FPSCounter.cpp  FPSCounter.h  MassSlider.cpp  MassSlider.h  UIElement.cpp  UIElement.h  UIElement.hpp  UIElementIdentifierEnum.h  UIElementIdentifierEnum.hpp  UIElementTypeEnum.h
Transfer/src/Entities/UIElements/Buttons/: Button.cpp  Button.h  Button.hpp  PlayGameButton.cpp  PlayGameButton.h
Transfer/src/Entities/UIElements/Buttons/DefaultButton/: DefaultButton.cpp  DefaultButton.h
Transfer/src/Entities/UIElements/Buttons/PlayGameButton/: PlayGameButton.cpp  PlayGameButton.h  PlayGameButton.hpp
Transfer/src/Entities/UIElements/Buttons/ResumeButton/: ResumeButton.cpp  ResumeButton.h  ResumeButton.hpp
Transfer/src/Entities/UIElements/Checkboxes/: Checkbox.h  Checkbox.hpp
Transfer/src/Entities/UIElements/Overlay/: FPSCounter.cpp  FPSCounter.h  FPSCounter.hpp
Transfer/src/Entities/UIElements/PopUps/: PopUp.cpp  PopUp.hpp
Transfer/src/Entities/UIElements/Sliders/: MassSlider.cpp  MassSlider.h  MassSlider.hpp  RadiusSlider.cpp  RadiusSlider.h  RadiusSlider.hpp  SimulationSpeedSlider.cpp  SimulationSpeedSlider.h  SimulationSpeedSlider.hpp  Slider.cpp  Slider.h  Slider.hpp
Transfer/src/Entities/VisualElements/: TwinklingStars.h
Transfer/src/HLSL/: Body.frag.hlsl  Body.vert.hlsl  TwinklingStar.frag.hlsl  TwinklingStar.vert.hlsl  UIElement.frag.hlsl  UIElement.vert.hlsl  UnifiedGravBody.frag.hlsl  UnifiedGravBody.vert.hlsl  VelocityVector.frag.hlsl  VelocityVector.vert.hlsl
Transfer/src/Scenes/: Scene.cpp  Scene.h  Scene.hpp  SceneIdentifierEnum.h
Transfer/src/Scenes/GameScene/: GameScene.cpp  GameScene.h  GameScene.hpp
Transfer/src/Scenes/PauseScene/: PauseScene.cpp  PauseScene.h  PauseScene.hpp
Transfer/src/Scenes/StartMenuScene/: StartMenuScene.cpp  StartMenuScene.h  StartMenuScene.hpp
Transfer/src/Scenes/TestVisualScene/: TestVisualScene.cpp  TestVisualScene.h  TestVisualScene.hpp
Transfer/src/Systems/: AudioSystem.cpp  AudioSystem.h  AudioSystem.hpp  InputSystem.cpp  InputSystem.h  InputSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.h  RenderSystem.hpp  UISystem.cpp  UISystem.h  UISystem.hpp
Transfer/src/Utilities/: Colors.h  CustomMathUtilities.h  EngineConstants.h  GameSystemConstants.h  SystemPathUtility.h  TransferInputs.cpp  TransferInputs.h
Transfer/src/Utilities/Constants/: EngineConstants.h  EngineConstants.hpp  GameSystemConstants.h  GameSystemConstants.hpp
Transfer/src/Utilities/Math/: CustomMathUtilities.h  CustomMathUtilities.hpp  Vector2D.hpp
Transfer/src/Utilities/Rendering/: CameraData.hpp  CameraTransform.hpp  Colors.h  FontAtlasUtility.cpp  FontAtlasUtility.hpp  GPUTypes.hpp  UnifiedBodyVertex.hpp
Transfer/src/Utilities/System/: SystemPathUtility.h  SystemPathUtility.hpp
Transfer/src/Utilities/UserInput/: TransferInputs.cpp  TransferInputs.h  TransferInputs.hpp
